--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,9 @@ dependencies:
   dio: ^5.7.0
   get_it: ^8.0.3
   provider: ^6.1.2
-  firebase_core: ^3.10.1
-  firebase_auth: ^5.4.1
-  cloud_firestore: ^5.6.2
+  
+  cached_network_image: ^3.4.1
+  
 
 dev_dependencies:
   flutter_test:
