--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   provider: ^6.1.2
   
   cached_network_image: ^3.4.1
+  firebase_auth: ^5.4.1
+  firebase_core: ^3.10.1
+  flutter_swiper_null_safety: ^1.0.2
+  google_sign_in: ^6.2.2
+  flutter_launcher_icons: ^0.14.3
+  cloud_firestore: ^5.6.2
   
 
 dev_dependencies:
