--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_sign_in: ^6.2.2
   flutter_launcher_icons: ^0.14.3
   cloud_firestore: ^5.6.2
+  shared_preferences: ^2.5.1
   
 
 dev_dependencies:
